Fix T52813: Audaspace: Leak when loading factory settings

Patch by Joerg Mueller (neXyon) with some touchups by me.